khanhhung - Update API update task in app and write swagger
